Issue # #3144 - First steps in moving from Bootstrap 3 to 5.
These changes were based on ideas in article "Use Bootstrap 5 with Ruby on Rails 6 and webpack"
     https://medium.com/daily-web-dev/use-bootstrap-4-with-ruby-on-rails-6-and-webpack-fe7300604267

    Changes

    - Node  package changes:
      * Changed version of bootstrap "^3.4.1" --> "^5.2.3"
      * Added  @popperjs/core.
      * Removed bootstrap-3-typeahead, bootstrap-sass & popper.js.

     - In app/assets/stylesheets/application.scss:
      * removed bootstrap-sass import and replaced with
           @import "../../../node_modules/bootstrap/scss/bootstrap";

     - In app/assets/stylesheets/blocks/:
        * Replaced in relevant files
           @use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as * ;
        with
           @use "../../../../node_modules/bootstrap/scss/bootstrap" as *;

         * Enclosed all calculations / with calc() function, e.g.,
            replaced
                 padding-right: $grid-gutter-width / 2;
                 with
                 padding-right: calc($grid-gutter-width / 2);

          * Replaced with breaking media queries since Bootstrap 3:
             ** @media (max-width: $grid-float-breakpoint-max) {}
             with
             @include media-breakpoint-down(md){}

             **  @media (max-width: $grid-float-breakpoint-max) {}
              with
              @include media-breakpoint-down(md) {}

          (Based on blogs
           https://bibwild.wordpress.com/2019/06/10/what-happened-to-grid-float-breakpoint-in-bootstrap-4-and-screen-size-breakpoint-shift-from-3-4/ &
           https://www.educative.io/answers/what-are-media-queries-in-bootstrap-4)
        - Deleted app/javascript/src/utils/popoverHelper.js

--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "@rails/ujs": "^6.0.3-1",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
-    "bootstrap": "^3.4.1",
-    "bootstrap-3-typeahead": "^4.0.2",
-    "bootstrap-sass": "3.4.1",
+    "bootstrap": "5.2.3",
     "bootstrap-select": "^1.13.18",
     "chart.js": "^3.8.0",
     "core-js": "^3.6.5",
@@ -55,7 +53,7 @@
     "jquery-ui-sass": "^0.0.1",
     "js-cookie": "^3.0.1",
     "number-to-text": "^0.3.8",
-    "popper.js": "^1.16.1",
+    "@popperjs/core": "^2.11.6",
     "rails-erb-loader": "^5.5.2",
     "regenerator-runtime": "^0.13.5",
     "sass": "^1.57.1",
