--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,7 @@ spec/examples.txt
 yarn-debug.log*
 .yarn-integrity
 /app/assets/builds/*
-!/app/assets/builds/.keep
+!/app/assets/builds/.gitkeep
 
 # Ignore briley AWS cloud9 script to start the application
 cloud9-start.sh
