config: add env var to enable shibboleth

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -22,6 +22,7 @@ services:
       - -c
       - |
         ruby bin/docker ${DB_ADAPTER:-postgres}
+        ruby bin/docker db:setup
         rm -f /app/tmp/pids/server.pid
         bin/dev
     networks:
