--- a/config/dmproadmap.yml
+++ b/config/dmproadmap.yml
@@ -357,7 +357,7 @@ default: &default
   require_contributor_name: true
 
   # Enable/disable functionality on the Project Details tab
-  enable_ethical_issues: true
+  enable_ethical_issues: false
   enable_research_domain: true
 
   # This flag will enable/disable the entire Research Outputs tab. The others below will
