--- a/nginx/default.template
+++ b/nginx/default.template
@@ -4,7 +4,7 @@ server {
   listen ${NGINX_PORT};
   listen [::]:${NGINX_PORT};
 
-  root /var/www/public;
+  root /var/www/html/public;
   index index.html;
 
   ## Configuration
