Added jsx files to editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ insert_final_newline = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.{js,scss,rb,erb}]
+[*.{js,jsx,scss,rb,erb}]
 charset = utf-8
 indent_style = space
 indent_size = 2
