--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   "extends": [
     "plugin:react/jsx-runtime",
     "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
     "airbnb-base"
   ],
   "parserOptions": {
