--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "core-js": "^3.6.5",
     "dompurify": "^3.0.0",
     "file-loader": "^6.2.0",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-sass": "^0.0.1",
