--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-env": "7.21.5",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@hotwired/turbo-rails": "^7.1.3",
     "@rails/actioncable": "^6.0.3-1",
