--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@babel/preset-env": "^7.20.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@hotwired/turbo-rails": "^7.1.3",
-    "@rails/actioncable": "^6.0.3-1",
-    "@rails/activestorage": "^6.0.3-1",
-    "@rails/ujs": "^6.0.3-1",
+    "@rails/actioncable": "^7.0.5",
+    "@rails/activestorage": "^7.0.5",
+    "@rails/ujs": "^7.0.5",
     "autonumeric": "^4.6.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
@@ -72,7 +72,7 @@
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-webpack-plugin": "^2.6.0",
+    "eslint-webpack-plugin": "^4.0.0",
     "jasmine": "^4.2.1",
     "jasmine-core": "^4.2.0",
     "karma": "^6.3.14",
