--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@rails/actioncable": "^7.0.5",
     "@rails/activestorage": "^7.0.5",
     "@rails/ujs": "^7.0.5",
+    "@tinymce/tinymce-react": "^4.3.0",
     "autonumeric": "^4.6.0",
     "axios": "^1.3.3",
     "babel-loader": "^9.1.2",
@@ -79,6 +80,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.2",
+    "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-proptypes": "^1.0.0",
     "react-select": "^5.7.0",
