chore: ignore database.yml & credentials.yml.enc

--- a/.gitignore
+++ b/.gitignore
@@ -60,9 +60,6 @@ config/locale/*/app.po.time_stamp
 lib/data_cleanup/rules/org/fix_blank_abbreviation.yml
 .rspec
 
-yarn-error.log
-yarn-debug.log*
-
 .env
 .env.sample
 package-lock.json
@@ -72,17 +69,14 @@ node_modules
 
 spec/examples.txt
 .postcssrc.yml
-/node_modules
-yarn-debug.log*
-.yarn-integrity
 reset.sh
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/credentials.yml.enc
+/config/database.yml
 
-/node_modules
-/yarn-error.log
+yarn-error.log
 yarn-debug.log*
 .yarn-integrity
 /app/assets/builds/*
@@ -92,5 +86,3 @@ yarn-debug.log*
 cloud9-start.sh
 
 data
-
-config/database.yml
