Added missing js dependencies

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jquery-ui-sass": "^0.0.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "number-to-text": "^0.3.8",
     "popper.js": "^1.16.1",
     "rails-erb-loader": "^5.5.2",
@@ -75,6 +76,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-proptypes": "^1.0.0",
     "react-select": "^5.7.0",
+    "react-tooltip": "^5.13.1",
     "react-window": "^1.8.9",
     "regenerator-runtime": "^0.13.5",
     "remount": "^1.0.0",
