config: add recaptcha env vars in docker-compose.yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       - RAILS_MAX_THREADS=${RAILS_MAX_THREADS:-5}
       - WICKED_PDF_PATH=${WICKED_PDF_PATH:-/usr/local/bin/wkhtmltopdf}
       - DRAGONFLY_AWS=${DRAGONFLY_AWS:-false}
+      - RECAPTCHA_SITE_KEY=${RECAPTCHA_SITE_KEY:-11111}
+      - RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY:-22222}
       - AWS_REGION
       - AWS_BUCKET_NAME
       - BUNDLE_GEMFILE
