Updated build documentation, fixed docker-compose & update gems

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - DB_USERNAME=${DB_USERNAME:-postgres}
       - DB_PASSWORD=${DB_PASSWORD:-changeme}
       - DMPROADMAP_HOST=${DMPROADMAP_HOST:-dmpopidor}
-      - RAILS_SERVE_STATIC_FILES$={RAILS_SERVE_STATIC_FILES:-true}
+      - RAILS_SERVE_STATIC_FILES=${RAILS_SERVE_STATIC_FILES:-true}
       - RAILS_LOG_LEVEL=${RAILS_LOG_LEVEL:-debug}
       - RAILS_LOG_TO_STDOUT=${RAILS_LOG_TO_STDOUT:-true}
       - DOMAIN=${DOMAIN:-app}
