--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jquery-ui": "^1.12.1",
     "jquery-ui-sass": "^0.0.1",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "number-to-text": "^0.3.8",
     "popper.js": "^1.16.1",
     "puppeteer": "^19.1.2",
