--- a/nginx/default.template
+++ b/nginx/default.template
@@ -13,6 +13,8 @@ server {
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_hide_header X-Powered-By;
 
+  client_max_body_size 10M;
+
   location ~ /\. {
     deny all;
   }
