Added missing js dependencies following styled-components lib upgrade

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "remount": "^1.0.0",
     "sass": "^1.57.1",
     "styled-components": "^6.0.7",
+    "stylis": "^4",
     "sweetalert2": "^11.7.3",
     "timeago.js": "^4.0.2",
     "tinymce": "^6.4.1",
