--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "bootstrap-select": "^1.13.18",
     "chart.js": "^4.2.1",
     "core-js": "^3.6.5",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.0.0",
     "file-loader": "^6.2.0",
     "i18next": "^23.4.0",
