--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DMPRoadmap javascript dependencies",
   "main": "null",
   "scripts": {
-    "lint": "yarn run eslint --ext .js app/javascript/**/*.js --ext .js app/javascript/dmp_opidor_react/**/*.jsx",
+    "lint": "yarn run eslint --ext .js,.jsx app/javascript/**/",
     "test": "karma start spec/karma/unit.js",
     "build": "webpack --config ./config/webpack/webpack.config.js",
     "build:css": "sass ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
