--- a/nginx/default.template
+++ b/nginx/default.template
@@ -49,4 +49,13 @@ server {
     proxy_redirect off;
     proxy_pass http://dmpopidor:3000;
   }
+  # enables WS support
+  location /cable {
+    proxy_pass http://dmpopidor:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade websocket;
+    proxy_set_header Connection Upgrade;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
 }
