refactor: remove lodash when not necessary & used smaller lodash packages

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "jquery-ui": "^1.12.1",
     "jquery-ui-sass": "^0.0.1",
     "js-cookie": "^3.0.1",
-    "lodash": "^4.17.21",
+    "lodash.chunk": "^4.2.0",
+    "lodash.unionby": "^4.8.0",
     "moment": "^2.29.4",
     "number-to-text": "^0.3.8",
     "popper.js": "^1.16.1",
