--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,10 +9,8 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  # access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  # secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
   region: us-west-2
-  bucket: <%= Rails.configuration.x.dmproadmap.dragonfly_bucket %>
+  bucket: "uc3-s3dmp-<%= Rails.env.production? ? 'prd' : 'stg' %>"
   http_open_timeout: 5
   http_read_timeout: 5
   retry_limit: 2
