--- a/package.json
+++ b/package.json
@@ -44,51 +44,32 @@
     "@rails/actioncable": "^7.0.5",
     "@rails/activestorage": "^7.0.5",
     "@rails/ujs": "^7.0.5",
-    "@tinymce/tinymce-react": "^4.3.0",
     "autonumeric": "^4.6.0",
-    "axios": "^1.3.3",
     "bootstrap": "^3.4.1",
     "bootstrap-3-typeahead": "^4.0.2",
     "bootstrap-sass": "3.4.1",
     "bootstrap-select": "^1.13.18",
     "chart.js": "^4.2.1",
     "core-js": "^3.6.5",
-    "date-fns": "^2.30.0",
-    "dompurify": "^3.0.0",
     "file-loader": "^6.2.0",
-    "i18next": "^23.4.0",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.2.0",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-sass": "^0.0.1",
     "js-cookie": "^3.0.1",
-    "lodash.chunk": "^4.2.0",
-    "lodash.unionby": "^4.8.0",
-    "lodash.uniqueid": "^4.0.1",
-    "moment": "^2.29.4",
     "number-to-text": "^0.3.8",
     "popper.js": "^1.16.1",
     "rails-erb-loader": "^5.5.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^0.33.1",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-i18next": "^13.2.2",
-    "react-icons": "^4.8.0",
-    "react-loader-spinner": "^5.3.4",
     "react-proptypes": "^1.0.0",
-    "react-select": "^5.7.0",
-    "react-tooltip": "^5.13.1",
     "react-window": "^1.8.9",
     "regenerator-runtime": "^0.14.0",
     "remount": "^1.0.0",
     "sass": "^1.57.1",
     "select2": "~4.0",
     "select2-bootstrap-theme": "^0.1.0-beta.10",
-    "styled-components": "^6.0.7",
     "stylis": "^4",
-    "sweetalert2": "^11.7.3",
+    "sweetalert2": "^11.7.32",
     "timeago.js": "^4.0.2",
     "tinymce": "^6.4.1",
     "webpack": "^5.75.0",
@@ -103,13 +84,9 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@cfaester/enzyme-adapter-react-18": "^0.7.0",
-    "@testing-library/jest-dom": "^6.1.0",
-    "@testing-library/react": "^14.0.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
     "css-loader": "^6.7.3",
-    "enzyme": "^3.11.0",
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -127,8 +104,8 @@
     "karma-jquery": "^0.2.4",
     "karma-json-fixtures-preprocessor": "^0.0.6",
     "karma-webpack": "^5.0.0",
-    "react-test-renderer": "^18.2.0",
-    "style-loader": "^3.3.2"
+    "style-loader": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.9"
   },
   "resolutions": {
     "webpack": "^5.75.0"
