refactor: added redis cache to production config & REDIS_URL in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - DRAGON_FLY_SECRET=${DRAGON_FLY_SECRET:-my_secret_key}
       - RECAPTCHA_SITE_KEY=${RECAPTCHA_SITE_KEY:-11111}
       - RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY:-22222}
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379/1}
       - AWS_REGION
       - AWS_BUCKET_NAME
       - BUNDLE_GEMFILE
