--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       dockerfile: Dockerfile.dev
     env_file:
       - .env.dev
-    command: bash -c "rm -f ./tmp/pids/server.pid && ./bin/dev"
+    command: bash -c "rm -f ./tmp/pids/server.pid && rm -f ./tmp/pids/delayed_job.pid && ./bin/dev"
     user: "1000:1000"
     ports:
       - "3000:3000"
