--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,10 @@ yarn-debug.log*
 cloud9-start.sh
 
 data
+
+# React submodule
+app/javascript/dmp_opidor_react/specifications
+app/javascript/dmp_opidor_react/.vscode
+app/javascript/dmp_opidor_react/node_modules
+app/javascript/dmp_opidor_react/src/__tests__
+app/javascript/dmp_opidor_react/src/data
