--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -7,13 +7,17 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    # Checkout the repo
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+
+    - name: 'Determine Ruby and Bundler Versions from Gemfile.lock'
+      run: |
+        echo "RUBY_VERSION=`cat ./Gemfile.lock | grep -A 1 'RUBY VERSION' | grep 'ruby' | grep -oE '[0-9]\.[0-9]'`" >> $GITHUB_ENV
 
     # Install Ruby and run bundler
-    - uses: ruby/setup-ruby@v1
+    - name: 'Install Ruby'
+      uses: ruby/setup-ruby@v1.167.0
       with:
-        ruby-version: '3.1'
+        ruby-version: ${{ env.RUBY_VERSION }}
         bundler-cache: true
 
     # Run the Rubocop linter checks
