refactor: added docker configuration for translation api key

--- a/config/credentials.yml.sample
+++ b/config/credentials.yml.sample
@@ -24,3 +24,6 @@ dragonfly_secret: my_secret_key
 recaptcha:
   site_key: 11111
   secret_key: 22222
+
+tranlation_io:
+  translation_api_key: my_key
