--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,5 @@ app/javascript/dmp_opidor_react/.vscode
 app/javascript/dmp_opidor_react/node_modules
 app/javascript/dmp_opidor_react/src/__tests__
 app/javascript/dmp_opidor_react/src/data
+
+puma.pid
