--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "lint": "yarn run eslint --ext .js app/javascript/**/*.js",
     "test": "karma start spec/karma/unit.js",
-    "pa11y-sitemap": "pa11y-ci --sitemap http://localhost:3000/sitemap.xml --sitemap-exclude \"/*.pdf\"",
     "build": "webpack --config ./config/webpack/webpack.config.js",
     "build:css": "sass ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   },
@@ -86,9 +85,7 @@
     "karma-jasmine": "^5.1.0",
     "karma-jquery": "^0.2.4",
     "karma-json-fixtures-preprocessor": "^0.0.6",
-    "karma-webpack": "^5.0.0",
-    "pa11y": "^6.2.3",
-    "pa11y-ci": "^3.0.1"
+    "karma-webpack": "^5.0.0"
   },
   "resolutions": {
     "webpack": "^5.75.0"
