--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
     image: mysql/mysql-server:latest
     container_name: mysql
     ports:
-      - "3306:3306"
+      - "3307:3306"
+    expose:
+      - "3307"
     environment:
       MYSQL_DATABASE: 'dmp'
       MYSQL_ROOT_PASSWORD: 'dockerSecret'
@@ -39,6 +41,10 @@ services:
       - "3000"
     environment:
       - RAILS_ENV=development
+      # Uncomment this FIRST_TIME variable when you first setup your local dev environment.
+      # This will initialize the mysql DB. Then comment out afterward. You may need to restart
+      # the container after the initial run builds the DB.
+      # - FIRST_TIME=true
     env_file:
       - .env.dev
     volumes:
